# LLMpress

./: .gitignore  README.md  pyproject.toml
examples/flutter_bloc/: prompt.txt  source.dart
examples/python_fastapi/: prompt.txt  source.py
examples/test/: component_tokens.dart  prompt.txt
examples/typescript_react/: prompt.txt  source.tsx
src/llmpress/: __init__.py  cli.py
src/llmpress/core/: __init__.py  compressor.py  decompressor.py  models.py
src/llmpress/phases/: __init__.py  base.py  comment_stripper.py  dict_builder.py  phrase_detector.py  rewriter.py  whitespace.py
src/llmpress/providers/: __init__.py  anthropic.py  openai.py
src/llmpress/tokenizers/: __init__.py  approximate.py  base.py  tiktoken_adapter.py
tests/: conftest.py  test_benchmarks.py  test_cli.py  test_compressor.py  test_dict_builder.py  test_phrase_detector.py  test_rewriter.py  test_roundtrip.py  test_stats.py  test_tokenizers.py  test_whitespace.py
tests/fixtures/csharp/: aspnet_controller.cs
tests/fixtures/dart/: extensions.dart  generics.dart
tests/fixtures/flutter/: bloc_widget.dart  freezed_model.dart  repository.dart  riverpod_page.dart
tests/fixtures/java/: spring_repository.java
tests/fixtures/prompts/: bugs.txt  performance.txt  refactor.txt  review.txt  tests.txt
tests/fixtures/python/: dataclasses_example.py  fastapi_app.py
tests/fixtures/typescript/: react_component.tsx  service.ts
